--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-customtkinter>=5.2.0
+PySide6>=6.6.0
 pyaudio>=0.2.11
 openai>=1.0.0
 python-dotenv>=1.0.0
@@ -6,3 +6,5 @@ Pillow>=10.0.0
 whisper>=1.1.10
 torch>=2.0.0
 numpy>=1.24.0
+qtawesome>=1.3.0
+qdarktheme>=2.1.0
