WIP: partial progress from crashed worker

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,30 +1,23 @@
 # Test requirements for ScribeVault
-# These are additional packages needed for testing beyond the main application requirements
+#
+# Pinning strategy: each package uses >=minimum,<next-major to allow
+# patch/minor updates while preventing breaking major-version upgrades.
+#
+# These are additional packages needed for testing beyond the main
+# application requirements.
 
 # Core testing framework
-pytest>=7.0.0
-pytest-cov>=4.0.0
-pytest-mock>=3.8.0
-pytest-asyncio>=0.21.0
-
-# Test fixtures and utilities
-factory-boy>=3.2.0
-freezegun>=1.2.0
-responses>=0.20.0
+pytest>=7.0.0,<10.0.0
+pytest-cov>=4.0.0,<7.0.0
+pytest-mock>=3.8.0,<4.0.0
 
 # Code quality and linting for tests
-flake8>=5.0.0
-black>=22.0.0
-isort>=5.10.0
+flake8>=5.0.0,<8.0.0
+black>=22.0.0,<27.0.0
+isort>=5.10.0,<6.0.0
 
 # Type checking
-mypy>=1.0.0
+mypy>=1.0.0,<2.0.0
 
 # Coverage reporting
-coverage>=6.0.0
-
-# Performance testing
-pytest-benchmark>=4.0.0
-
-# Mock external dependencies
-pytest-httpserver>=1.0.0
+coverage>=6.0.0,<8.0.0
